--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,17 @@ img{
 	display: block;
 }
 
+
+/*
+* WordPress comments form
+*/
+.comment-form-comment,
+.comment-form-author,
+.comment-form-email,
+.comment-form-url {
+    width: 100%;
+}
+
 /* Extra small devices (phones, less than 768px) */
 /* No media query since this is the default in Bootstrap */
 
@@ -21,6 +32,13 @@ img{
 @media (min-width: 767px) {
 	img{
 		max-width: 100%;
+	}
+
+	.comment-form-comment,
+	.comment-form-author,
+	.comment-form-email,
+	.comment-form-url {
+    		width: 50%;
 	}
 }
 
